fixed: IE11 layout issues

--- a/src/apps/teams/src/components/InviteCard/InviteCard.less
+++ b/src/apps/teams/src/components/InviteCard/InviteCard.less
@@ -3,11 +3,14 @@
 .TeamInvite {
   background-color: @zesty-teal;
   color: @zesty-white;
+  max-width: 500px;
 
   flex: 1 0 0%;
+  margin: 1rem;
   @supports (display: grid) {
     display: grid;
     grid-template-rows: 30px 3fr 50px;
+    margin: 0;
   }
 
   &:hover,
