--- a/src/apps/teams/src/components/TeamCard/TeamCard.less
+++ b/src/apps/teams/src/components/TeamCard/TeamCard.less
@@ -2,11 +2,14 @@
 
 .TeamCard {
   max-height: 470px;
+  max-width: 500px;
 
   flex: 1 0 0%;
+  margin: 1rem;
   @supports (display: grid) {
     display: grid;
     grid-template-rows: 30px 3fr 50px;
+    margin: 0;
   }
 
   &:hover,
